Uniformize image/sound loading

--- a/bambam.6
+++ b/bambam.6
@@ -14,6 +14,9 @@ Whether to produce same sounds on same key presses.
 .TP
 \fB\-\-sound_blacklist\fR=\fIGLOB\fR
 List sound filename patterns to never play.
+.TP
+\fB\-\-image_blacklist\fR=\fIGLOB\fR
+List image filename patterns to never show.
 .PP
 bambam is a keyboard and mouse game for babies written in Python.
 Pressing letter keys prints them in random locations and colours.
