deterministic sounds i.e. same keypress produces same sound

--- a/bambam.6
+++ b/bambam.6
@@ -9,6 +9,9 @@ bambam \- a keyboard mashing and doodling game for babies
 \fB\-u\fR, \fB\-\-uppercase\fR
 Whether to show UPPER-CASE letters.
 .TP
+\fB\-d\fR, \fB\-\-deterministic\-sounds\fR
+Whether to produce same sounds on same key presses.
+.TP
 \fB\-\-sound_blacklist\fR=\fIGLOB\fR
 List sound filename patterns to never play.
 .PP
